fix kmainwindow size restorage, WA QTBUG 40584

This
a) ensures there's windowaHandle() to restore the size for
b) works around a pending Qt bug by explicitly coyping the
   restored QWindow size to the QWidget size

BUG: 337353
REVIEW: 120078